overflow resolved

--- a/src/Components/Hero/Scene.styles.css
+++ b/src/Components/Hero/Scene.styles.css
@@ -23,11 +23,10 @@
 .container {
   width: 100%;
   height: 100vh;
-  overflow: hidden;
   background: url(backgroundPS.jpg);
   background-attachment: fixed;
   position: relative;
-  background-size: cover;
+  overflow: hidden;
 }
 
 .cloud-left {
@@ -46,8 +45,7 @@
 
 @media (min-width: 1400px) {
   .container {
-    width: 100vw;
-    height: 100vh;
+    background-size: cover;
   }
 }
 
